# AntennaCalculator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  antenna_calculator.py  bowtie.py  dipole.py  dxf_generator.py  gerber_generator.py  monopole.py  print_generator.py  pyproject.toml  rectangular_patch.py  requirements.txt
.github/workflows/: draft-pdf.yml  lint.yml  security.yml  tests.yml
paper/: paper.bib  paper.md
src/: antenna_calculator.py  dipole.py  dxf_generator.py  gerber_generator.py  gui.py  monopole.py  print_generator.py  rectangular_patch.py
src/views/: dipole_view.py  monopole_view.py  rectangular_patch_view.py
tests/: conftest.py  test_antenna_calculator.py  test_dipole.py  test_monopole.py  test_rectangular_patch.py
