[project]
name = "AntennaCalculator"
version = "3.0.0"
description = "Open Source Antenna Designer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Erwin Karincic"}
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "ezdxf~=1.4.0",
    "flet~=0.80.5",
    "pcb-tools~=0.1.6",
    "pcb-tools-extension~=0.9.3",
    "pillow~=11.1.0",
    "Pint~=0.24.4",
]

[project.urls]
Homepage = "https://github.com/Dollarhyde/AntennaCalculator"
Repository = "https://github.com/Dollarhyde/AntennaCalculator"
"Bug Tracker" = "https://github.com/Dollarhyde/AntennaCalculator/issues"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.flet]
# Flet build configuration
# Build with:  flet build <platform>
# Platforms:   windows, linux, macos
app.path = "src"
app.module = "gui.py"
app.name = "AntennaCalculator"
app.description = "Open Source Antenna Designer"
app.version = "3.0.0"
app.build_number = "1"